--- a/.github/workflows/docker-build-scan-push.yml
+++ b/.github/workflows/docker-build-scan-push.yml
@@ -13,10 +13,8 @@ jobs:
       security-events: write
       id-token: write
     env:
-      IMAGE_REPO: jpecora/nix-foundation
+      IMAGE_REPO: jpecora/nix-foundation-untrusted
       IMAGE_TAG: latest
-      WIZ_CLIENT_ID: ${{ secrets.WIZ_CLIENT_ID }}
-      WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
@@ -37,44 +35,8 @@ jobs:
         with:
           driver: docker
 
-      - name: Build and export to Docker
-        id: build-docker
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        uses: docker/build-push-action@v6
-        with:
-          load: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}:${{ env.IMAGE_TAG }}
-
-      - name: Summarize the Docker digest and Image ID
-        run: |
-          echo 'Digest: ${{ steps.build-docker.outputs.digest }}'
-          echo 'ImageID: ${{ steps.build-docker.outputs.ImageID }}'
-
-      - name: Download Wiz CLI
-        run: curl -o wizcli https://wizcli.app.wiz.io/latest/wizcli && chmod +x wizcli
-
-      - name: Authenticate to Wiz
-        run: sudo -E ./wizcli auth
-
-      - name: Run Wiz CLI image scan
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        id: scan
-        run: |-
-          sudo -E ./wizcli docker scan -i ${REGISTRY}/${IMAGE_REPO}:${IMAGE_TAG} --policy-hits-only \
-          --dockerfile "./Dockerfile" --output wiz-output.json,sarif,true --tag github_action_run_id=${{ github.run_id }} \
-          --sbom-format spdx-json --sbom-output-file sbom.json
-        continue-on-error: true
-
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: wiz-output.json
-          category: wiz
-
-      - name: Push
-        id: push-docker
+      - name: Build and Push
+        id: build-push-docker
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         uses: docker/build-push-action@v6
@@ -86,9 +48,3 @@ jobs:
         run: |
           echo 'Digest: ${{ steps.push-docker.outputs.digest }}'
           echo 'ImageID: ${{ steps.push-docker.outputs.ImageID }}'
-
-      - name: Run Wiz CLI image tag
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        run: sudo -E ./wizcli docker tag -i ${REGISTRY}/${IMAGE_REPO}:${IMAGE_TAG} --digest ${{ steps.push-docker.outputs.digest }}
-
