--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nix-foundation-www
+  name: nix-foundation-www-untrusted
 spec:
   ports:
   - port: 80
     targetPort: 8080
   selector:
-    app: nix-foundation-www
+    app: nix-foundation-www-untrusted
   type: LoadBalancer
